--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ publish_to: none
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+   path: ^1.8.0
+   test: ^1.16.0
+   conduit: ^4.1.6
+   jaguar_jwt: ^3.0.0
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
   conduit: ^4.1.6
+  jaguar_jwt: ^3.0.0
